@@ -18,6 +18,8 @@ version 0.9.2 - Not released, available at https://simupop.svn.sourceforge.net/s
   - NEW: Remove pyMigrator from the core. The varying migration rate migrator can
         be easily implemented in a Python operator. The indFunc mode is not at all
         useful because it can be done by a Python operator plus mode=ByIndInfo.
+  - NEW: Allow unordered lociPos specification in population(), lociNames will be
+		rearranged accordingly.
 		
 
 version 0.9.1 - (Rev 2330) Jan 13, 2009
